# NetSentinel

./: .dockerignore  .gitignore  DEVELOPMENT_INSTRUCTIONS.md  DOCKER.md  Dockerfile  Dockerfile.dev  Makefile  PHASE1_STATUS.md  README.md  config_example.yaml  docker-compose.yml  docker.sh  pyproject.toml  requirements.txt  setup.py
docs/: README.md
netsentinel/: __init__.py  config.py  main.py  models.py  services.py  utils.py
scripts/: generate_sample_data.py  quick_test.py
tests/: conftest.py  test_config.py  test_models.py
